--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,13 @@ android {
         minSdkVersion 19
         targetSdkVersion 24
         multiDexEnabled true
+
+        jackOptions {
+            enabled true
+        }
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_5
-            targetCompatibility JavaVersion.VERSION_1_5
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
         }
     }
 
