--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.myflightbook.android" android:versionName="2.9.7.2" android:versionCode="61" xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="24" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.myflightbook.android"
+    android:versionCode="61"
+    android:versionName="2.9.7.2">
+
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="24" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-   	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-feature android:name="android.hardware.camera" android:required="false" />
-	<uses-feature android:name="android.hardware.location" android:required="false" />
-	<uses-feature android:glEsVersion="0x00020000" android:required="true"/>
-	<application android:theme="@android:style/Theme.Holo.Light.DarkActionBar" android:allowBackup="true" android:name="android.support.multidex.MultiDexApplication"
-     android:icon="@drawable/icon" android:label="@string/app_name" android:supportsRtl="true">
-     	<uses-library android:name="com.google.android.maps" android:required="false" />
-		<activity android:name=".MFBMain" android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity android:name=".EditAircraftActivity" android:windowSoftInputMode="stateHidden" />
-		<activity android:name=".EditFlightActivity" android:windowSoftInputMode="stateHidden" />
-		<activity android:name=".NewAircraftActivity" android:windowSoftInputMode="stateHidden" />
-		<activity android:name=".FlightQueryActivity" android:windowSoftInputMode="stateHidden"/>
-		<activity android:name=".RecentFlightsActivity" />
-		<activity android:name=".ActAddApproach" android:windowSoftInputMode="stateHidden"/>
-		<activity android:name=".ActFlightMap" android:windowSoftInputMode="stateHidden" />
-		<activity android:name=".ActNewUser" android:windowSoftInputMode="stateHidden"/>
-		<activity android:name=".ActSelectMake" />
-		<activity android:name=".ActViewProperties" />
-		<activity android:name=".ActWebView" />
-		<activity android:name=".ActLocalVideo" />
-		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/GoogleMapsKey"/>
-		<provider android:authorities="com.example.android.fileprovider" android:name="android.support.v4.content.FileProvider"
-				  android:exported="false" android:grantUriPermissions="true">
-			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
-		</provider>
-	</application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <application
+        android:name="android.support.multidex.MultiDexApplication"
+        android:allowBackup="true"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+        <uses-library
+            android:name="com.google.android.maps"
+            android:required="false" />
+
+        <activity
+            android:name=".MFBMain"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".EditAircraftActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".EditFlightActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".NewAircraftActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".FlightQueryActivity"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".RecentFlightsActivity" />
+        <activity
+            android:name=".ActAddApproach"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ActFlightMap"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ActNewUser"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ActSelectMake" />
+        <activity android:name=".ActViewProperties" />
+        <activity android:name=".ActWebView" />
+        <activity android:name=".ActLocalVideo" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/GoogleMapsKey" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+    </application>
 </manifest> 
