Added a time calculator.  Press-and-hold on totals to launch it, lets you add additional flight segments to your total time (i.e., just makes the math easier).
Shows an equation using decimal or hh:mm.  You can copy the value to the clipboard, or just hit back.

Had to modify DecimalEdit to include a force flag to force HH:MM.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
         <activity
             android:name=".ActNewUser"
             android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ActTimeCalc"
+            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".ActSelectMake" />
         <activity android:name=".ActViewProperties" />
         <activity android:name=".ActWebView" />
