Fix (again) build issues with new Android Studio

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.myflightbook.android"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 24
         multiDexEnabled true
 
-        jackOptions {
-            enabled true
-        }
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
-        }
+        android.compileOptions.sourceCompatibility 1.8
+        android.compileOptions.targetCompatibility 1.8
     }
 
     buildTypes {
