--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
                 <data android:scheme="file" />
                 <data android:host="*" />
                 <data android:mimeType="*/*" />
-                <data android:pathPattern=".*\\.kml" />
+                <data android:pathPattern=".*\\.gpx" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
