Fix android.os.FileUriExposedException by switching from Uri.fromFile which returns a file:// URL, to FileProvider.getUriForFile, which returns a content:// URL.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,7 +136,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.example.android.fileprovider"
+            android:authorities="com.myflightbook.android.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
