--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
     implementation files('libs/annotations.jar')
     implementation files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:exifinterface:28.0.0-alpha1'
 }
