Fix issue #105 - move location/GPS to a background service.  - Implement new mfblocationservice class.  This broadcasts intent messages of location changes, runs as background service and uses the FusedLocationProvider

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -144,5 +144,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+        <service android:name=".mfblocationservice" />
     </application>
 </manifest> 
