--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,11 @@ dependencies {
     implementation files('libs/annotations.jar')
     implementation files('libs/ksoap2-android-assembly-3.6.2-jar-with-dependencies.jar')
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support:exifinterface:28.0.0-rc01'
+    implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.android.support:support-core-ui:27.1.1'
+    implementation 'com.android.support:support-core-utils:27.1.1'
+    implementation 'com.android.support:support-fragment:27.1.1'
+    implementation 'com.android.support:support-media-compat:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
 }
