Issue #145: Support for Templates  - New PropertyTemplate and TemplateGroup classes encapsulate this functionality  - New ActViewTemplates to select the templates you wish to use.  - Switched CustomPropertyTypesSvc away from AvailablePropertyTypesForUser to PropertiesAndTemplatesForUser instead; refreshing properties refreshes templates
 Other misc. fixes/enhancements
 - Aircraft has new DefaultTemplates and DefaultImage properties; Bumped version of SQL data, added columns for defaultImage and default templates
 - szSortKey wasn't being set to szTitle when not otherwise specified; it is now, so sorting should work.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,7 @@
         <activity
             android:name=".ActViewProperties"
             android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ViewTemplatesActivity" android:windowSoftInputMode="stateHidden" />
         <activity android:name=".ActWebView" />
         <activity android:name=".ActLocalVideo" />
 
