--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.myflightbook.android"
-    android:versionCode="122"
-    android:versionName="2020.11.27.1">
+    android:versionCode="123"
+    android:versionName="2020.12.22.1">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -42,6 +42,7 @@
 
         <activity
             android:name=".MFBMain"
+            android:launchMode="singleTop"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -122,9 +123,11 @@
         </activity>
         <activity
             android:name=".EditAircraftActivity"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".EditFlightActivity"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".NewAircraftActivity"
