--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.core:core:1.7.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "com.google.android.material:material:1.4.0"
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
@@ -52,7 +53,7 @@ dependencies {
     implementation 'androidx.core:core:1.7.0'
     implementation 'androidx.legacy:legacy-support-core-ui:1.0.0'
     implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
-    implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'androidx.fragment:fragment:1.4.0'
     implementation 'androidx.media:media:1.4.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
