--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:roundIcon="@mipmap/ic_app_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/MFBTheme"
+        android:theme="@style/Theme.App.Starting"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:fullBackupContent="@xml/backup_descriptor">
         <uses-library
@@ -48,7 +48,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -160,13 +160,6 @@
         <activity android:name=".ViewTemplatesActivity" android:windowSoftInputMode="stateHidden" />
         <activity android:name=".ActWebView" />
         <activity android:name=".ActLocalVideo" />
-
-        <activity android:name=".SplashActivity" android:theme="@style/SplashTheme" android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
