--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,40 +126,56 @@
         <activity
             android:name=".EditAircraftActivity"
             android:launchMode="singleTop"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".EditFlightActivity"
+            android:theme="@style/MFBTheme"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".NewAircraftActivity"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".FlightQueryActivity"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".FixedExpandableListActivity" />
-        <activity android:name=".RecentFlightsActivity" />
+        <activity android:name=".FixedExpandableListActivity"
+            android:theme="@style/MFBTheme">
+        </activity>
+        <activity android:name=".RecentFlightsActivity"
+            android:theme="@style/MFBTheme">
+        </activity>
         <activity
             android:name=".ActAddApproach"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActFlightMap"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActNewUser"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActTimeCalc"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActSelectMake"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActViewProperties"
+            android:theme="@style/MFBTheme"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ViewTemplatesActivity" android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ActWebView" />
-        <activity android:name=".ActLocalVideo" />
+        <activity android:name=".ViewTemplatesActivity"
+            android:theme="@style/MFBTheme"
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ActWebView" android:theme="@style/MFBTheme" />
+        <activity android:name=".ActLocalVideo" android:theme="@style/MFBTheme" />
 
         <meta-data
             android:name="com.google.android.gms.version"
