Maps weren't showing up on some devices because of some bug in the theme of all things.  Don't use MFBTheme for flightmap, change color of unselected airport.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -153,7 +153,7 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActFlightMap"
-            android:theme="@style/MFBTheme"
+            android:theme="@style/Theme.AppCompat.DayNight"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ActNewUser"
