--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,7 @@ local.properties
 
 # Intellij
 *.iml
-.idea/workspace.xml
-#.idea/tasks.xml
-.idea/libraries
+.idea/
 
 # Keystore files
 #*.jks
@@ -40,8 +38,3 @@ local.properties
 #.externalNativeBuild
 
 /app/src/main/res/values/apikeys.xml
-.idea/assetWizardSettings.xml
-.idea/caches/
-.idea/codeStyles/
-/.idea/misc.xml
-/.idea/deploymentTargetDropDown.xml
