--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,8 @@
 buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
-        mavenCentral()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.1'
@@ -17,11 +13,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenCentral()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
 
     gradle.projectsEvaluated {
@@ -30,4 +23,3 @@ allprojects {
         }
     }
 }
-
