Update gitignore, gradel, manifest

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ local.properties
 /app/src/main/res/values/apikeys.xml
 /app/release/app-release.apk
 /app/release/output-metadata.json
+/app/release/app-release.aab
