Update airports, bump version.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.myflightbook.android"
         minSdk 28
         targetSdk 34
-        versionCode 178
-        versionName "2024.10.18"
+        versionCode 179
+        versionName "2025.01.24"
     }
 
     buildTypes {
@@ -47,7 +47,6 @@ android {
         }
     }
 
-
     namespace 'com.myflightbook.android'
     buildFeatures {
         buildConfig true
@@ -63,7 +62,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.4.0'
 
     // AndroidX
-    implementation 'androidx.activity:activity:1.10.0'
+    implementation 'androidx.activity:activity-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'androidx.core:core-splashscreen:1.0.1'
